# FluxForge

./: .gitignore  README.md  capability_gap_analysis.md  environment.yml  implementation_report.md  pyproject.toml  real_data_verification_report.md  setup.cfg
docs/: FLUXFORGE_CONSOLIDATED_MASTER.md  experimental_results_summary.md  quick_start.md
examples/: cadmium_cover_correction_example.py  complete_flux_unfolding.py  complete_flux_wire_workflow.py  complete_naa_workflow.py  endf_mf33_covariance_demo.py  epic_features_demo.py  flux_wire_unfolding_comparison.py  flux_wire_unfolding_demo.py  gamma_poisson_rmle_demo.py  generate_flux_spectrum.py  generate_plots.py  naa_ann_comparison.py  njoy_processing_example.py  nuclear_data_interface_example.py  reactor_dosimetry_workflow.py  run_comprehensive_benchmark.py  run_full_demo.py  sigphi_saturation_demo.py  staysl_interop_demo.py  staysl_reporting_demo.py  test_flux_wire_analysis.py  triga_k0naa_workflow.py  verify_real_data.py
examples_output/: README.md  asc_analysis_results.json  generated_alara.inp  mcnp_materials.json  spe_analysis_results.json  unfolded_results.json  unfolding_benchmark_results.json
flux_unfolding_results/: discrete_spectrum.csv  gls_spectrum.csv  reaction_data.csv  unfolded_spectrum.csv
testing_validation/: comprehensive_report.md  comprehensive_validation.py  cross_repo_comparison.py  cross_validate_testing_repos.py  validation_results.json
tests/: Co-Cd-RAFM-1_25cm.txt  audit_capabilities.py  batch_compare_spectra.py  flux_wire_spectrum_analysis.py  flux_wire_timing.csv  test_alara.py  (+47 more)
(+123 files in other folders)
