[project]
name = "fluxforge"
version = "0.1.0"
description = "UWNR Flux-Wire–Driven Neutron Spectrum Reconstruction Tool"
authors = [{name = "UWNR Team"}]
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[project.scripts]
fluxforge = "fluxforge.cli.app:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
